Fixed horizontal scrolling

--- a/src/components/TripsHistory/Trip.css
+++ b/src/components/TripsHistory/Trip.css
@@ -1,8 +1,3 @@
-.card {
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
 #trip-history-map-wrapper {
     display: flex;
     justify-content: center;
