--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
     font-family: "Inter", sans-serif;
 }
 
-html,
+/* html,
 body {
     max-width: 100%;
     overflow-x: hidden;
-}
+} */
